--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - mongo_db:mongo_db
     depends_on:
       - mongo_db
-    #restart: always  
+    restart: always  
     volumes:
       - ./backend/flask_app:/usr/src/app
     command: gunicorn -w 1 -b 0.0.0.0:5000 wsgi:app
@@ -32,17 +32,29 @@ services:
       - /app/node_modules
     stdin_open: true
     tty: true
-    #restart: always
+    restart: always
   
   mongo_db:
     image: mongo:latest
     restart: unless-stopped
-    environment:    # 환경변수를 정의합니다.
+    environment: 
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: vitaminc
     volumes:
        - ./mongo/db:/data/db
     ports:
       - "27017:27017"
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "8080:8080"
+      - "8081:8081"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - frontend
+      - backend
+    restart: "on-failure"
     
   
