--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,10 +45,10 @@ services:
     ports:
       - "27017:27017"
 
-  mongo-seed: # 처음에 빌드할때 실행시킨이후에 주석처리하기!
-    build: ./mongo-seed
-    links:
-      - mongo_db
+  # mongo-seed: # 처음에 빌드할때 실행시킨이후에 주석처리하기!
+  #   build: ./mongo-seed
+  #   links:
+  #     - mongo_db
 
   nginx:
     image: nginx:latest
@@ -74,6 +74,7 @@ services:
   
   prometheus:
     image: prom/prometheus:latest
+    user: root
     volumes:
       - ./prometheus/:/etc/prometheus/
       - ./prometheus/data:/prometheus
@@ -88,7 +89,7 @@ services:
 
   grafana:
     image: grafana/grafana
-    user: "472"
+    user: root
     depends_on:
       - prometheus
     ports:
