update seed container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     ports:
       - "27017:27017"
 
-  mongo-seed: # 현재 다시 사용 -> 주석풀고 실행 후 다시 주석처리!
+  mongo-seed: # 현재 다시 사용 (한번 실행 후에는 꼭 주석처리)
     build: ./mongo-seed
     links:
       - mongo_db
