--- a/mongo-seed/Dockerfile
+++ b/mongo-seed/Dockerfile
@@ -2,4 +2,4 @@ FROM mongo
 
 WORKDIR /temp
 COPY 2020_data.json /temp
-CMD mongoimport --host mongo_db --db vitaminc --collection 2020_data --type json --file /temp/2020_data.json --jsonArray
+CMD mongoimport --host mongo_db --db vitaminc --collection year_data --type json --file /temp/2020_data.json --jsonArray
