make use for search using json data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,43 +79,33 @@ services:
     environment:
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - "XPACK_SECURITY_ENABLED=false"
-
   # kibana:
-  #   image: docker.elastic.co/kibana/kibana:7.13.3
-  #   container_name: kibana
+  #   build:
+  #     context: ./ELK/kibana/
+  #     dockerfile: kibana.Dockerfile
+  #   volumes:
+  #     - type: bind
+  #       source: ./ELK/kibana/config/kibana.yml
+  #       target: /usr/share/kibana/config/kibana.yml
+  #       read_only: true
   #   ports:
-  #     - 5601:5601
-  #   environment:
-  #     ELASTICSEARCH_URL: http://elasticsearch:9200
-  #     ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
+  #     - "5601:5601"
+  #   depends_on:
+  #     - elasticsearch
 
-  kibana:
-    build:
-      context: ./ELK/kibana/
-      dockerfile: kibana.Dockerfile
-    volumes:
-      - type: bind
-        source: ./ELK/kibana/config/kibana.yml
-        target: /usr/share/kibana/config/kibana.yml
-        read_only: true
-    ports:
-      - "5601:5601"
-    depends_on:
-      - elasticsearch
-
-  logstash:
-    build:
-      context: ./ELK/logstash/
-      dockerfile: logstash.Dockerfile
-    volumes:
-      - type: bind
-        source: ./ELK/logstash/config/logstash.yml
-        target: /usr/share/logstash/config/logstash.yml
-        read_only: true
-      - type: bind
-        source: ./ELK/logstash/pipeline
-        target: /usr/share/logstash/pipeline
-        read_only: true
+  # logstash:
+  #   build:
+  #     context: ./ELK/logstash/
+  #     dockerfile: logstash.Dockerfile
+  #   volumes:
+  #     - type: bind
+  #       source: ./ELK/logstash/config/logstash.yml
+  #       target: /usr/share/logstash/config/logstash.yml
+  #       read_only: true
+  #     - type: bind
+  #       source: ./ELK/logstash/pipeline
+  #       target: /usr/share/logstash/pipeline
+  #       read_only: true
     ports:
       - "5001:5001/tcp"
       - "5001:5001/udp"
